--- a/src/explore_data_w_LSTM.ipynb
+++ b/src/explore_data_w_LSTM.ipynb
@@ -3911,9 +3911,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "wolee_edehaan_suzienoh_exploratory-ml",
+   "display_name": "nlp_env",
    "language": "python",
-   "name": "wolee_edehaan_suzienoh_exploratory-ml"
+   "name": "nlp_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3925,7 +3925,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
